syntax = "proto3";

import "google/protobuf/wrappers.proto";

package fake_detector;

service FakeDetector {
    rpc CheckTrust(CheckTrustRequest) returns (CheckTrustResponse);
    rpc CheckAITrust(CheckAITrustRequest) returns (CheckAITrustResponse);
    rpc GenerateTags(GenerateTagsRequest) returns (GenerateTagsResponse);
    rpc CheckMood(CheckMoodRequest) returns (CheckMoodResponse);
    rpc CheckSources(CheckSourcesRequest) returns (CheckSourcesResponse);
    rpc GetTextImage(GetTextImageRequest) returns (GetTextImageResponse);
    rpc GetTextAudio(GetTextAudioRequest) returns (GetTextAudioResponse);
}

message CheckTrustRequest {
    string text = 1;
}

message CheckTrustResponse {
    double checking_result = 1;
}

message CheckAITrustRequest {
    string text = 1;
}

message CheckAITrustResponse {
    double overall_human_made = 1;
    repeated SentenceAiTrust sentences = 2;
}

message SentenceAiTrust {
    double human_made = 1;
    string sentence = 2;
}

message GenerateTagsRequest {
    string text = 1;
}

message GenerateTagsResponse {
    repeated string tags = 1;
}

message CheckMoodRequest {
    string text = 1;
}

message CheckMoodResponse {
    string mood = 1;
}

message CheckSourcesRequest {
    string text = 1;
}

message CheckSourcesResponse {
    repeated SourceResult result = 1;
}

message SourceResult {
    string url = 1;
    google.protobuf.DoubleValue semantic_similarity = 2;
    repeated DiffComparison text_comparison = 3;
    KeywordsComparing keyword_comparison = 4;
    google.protobuf.StringValue original_text = 5;
    google.protobuf.StringValue original_title = 6;
}

message DiffComparison {
    int32 compare_type = 1;
    string value = 2;
}

message KeywordsComparing {
    repeated Keyword original = 1;
    repeated Keyword compare = 2;
    repeated Keyword intersection = 3;
}

message Keyword {
    string key = 1;
    repeated string values = 2;
}

message GetTextImageRequest {
    string url = 1;
}

message GetTextImageResponse {
    string text = 1;
}

message GetTextAudioRequest {
    string url = 1;
}

message GetTextAudioResponse {
    string text = 1;
}